--- a/sample.ipynb
+++ b/sample.ipynb
@@ -93,9 +93,187 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "6888957a",
+   "metadata": {},
+   "source": [
+    "## Lets see f we can identify the defected area in the image using prompt\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "id": "63393be4",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import google.generativeai as genai\n",
+    "import os\n",
+    "defect_image.show()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "id": "6adc97e0",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "genai.configure(api_key = os.getenv('GOOGLE_API_KEY'))\n",
+    "model = genai.GenerativeModel('gemini-2.5-flash-lite')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "id": "7bb9f3c8",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "prompt = f'''\n",
+    "In the uploaded image, identify the defected area and mark it in the image and \n",
+    "Generate the same image\n",
+    "'''"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "id": "a623cc64",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#model.generate_content([prompt,defect_image],generation_config={'response_mime_type':'image/png'})\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "id": "f6dee38b",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import datetime as dt"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "id": "5a976092",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "11:27:29.272745\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(dt.datetime.now().time())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "id": "4a07db46",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "2025-09-17\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(dt.datetime.now().date())"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "8dd8f128",
+   "metadata": {},
+   "source": [
+    "## Randomness in the generated text"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 32,
+   "id": "a9d2772e",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Why did the engineer break up with the mathematician?\n",
+      "\n",
+      "Because they had too many **problems** and not enough **solutions**!\n"
+     ]
+    }
+   ],
+   "source": [
+    "genai.configure(api_key = os.getenv('GOOGLE_API_KEY'))\n",
+    "model = genai.GenerativeModel('gemini-2.5-flash-lite')\n",
+    "prompt = 'Tell me a joke on engineering'\n",
+    "# Generate response with temperature control\n",
+    "response = model.generate_content(\n",
+    "    prompt,\n",
+    "    generation_config={\"temperature\": 0}\n",
+    ")\n",
+    "\n",
+    "# Print output\n",
+    "print(response.text)\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "e8576350",
+   "metadata": {},
+   "source": [
+    "METHODS TO CONTROL RANDOMNESS IN THE OUTPUT :\n",
+    "\n",
+    "Temperature (Controls the randomness and creativity)\n",
+    "* 0 -> deterministic, focused and factual\n",
+    "* 1 -> balanced creativity\n",
+    "* > 1 -> more diverse and less coherent\n",
+    "* HIgher temperatures may lead to hallucination\n",
+    "\n",
+    "\n",
+    "top_p(nucleus sampling - probability cutoff)\n",
+    "top_k()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "8f8b6a4c",
+   "metadata": {},
+   "source": [
+    "## DEFINING FILE FORMATS IN STREAMLIT(MIME)"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "7bb9f3c8",
+   "id": "d2390953",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "mime = 'text/plain'\n",
+    "\n",
+    "mime = 'application/pdf'\n",
+    "\n",
+    "file"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "b00dd997",
    "metadata": {},
    "outputs": [],
    "source": []
